--- a/src/comonents/Projects/index.css
+++ b/src/comonents/Projects/index.css
@@ -1,33 +1,6 @@
-.work {
-    position: relative;
-    float: left;
-    width: 274px;
-    margin: 30px;
-    border: solid 25px rgba(46, 104, 138, 0.5);
-    padding: -15 -65 -15 2;
-}
-.work:nth-child(even) {
-    margin-right: 70px;
-}
-.work:nth-child(odd) {
-    margin-left: 60px;
-}
-.work img {
-    width: 265px;
-    height: 200px;
-    border: 0 none;
-    opacity: 0.9;
-}
-.work h3 {
-    position: absolute;
-    bottom: 20px;
-    width: 120%;
-    padding: 15px;
-    margin-bottom: 0;
-    font-weight: 400;
-    line-height: 30px;
-    color: #ffffff;
-    text-align: center;
-    background: rgb(17, 94, 55, 0.75);
-    border-bottom: 0;
+
+.work{
+    width: 315px;
+    height: 300px;
+    object-fit: cover;
 }
