--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,10 @@
 }
 body{
   background-attachment: fixed;
+  margin: 0px !important;
+}
+html{
+  width: 100% !important;
+  padding: 0 1% 0 1% !important;  
+  background-color: rgb(18, 44, 24);
 }
