--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 }
 body{
   background-attachment: fixed;
-  margin: 0px !important;
+  margin: 0px auto!important;
+  height: 100vh;
+  background-image: linear-gradient(#f8f9fa,#f8f9fa, #bfc2bf);
 }
 html{
   width: 100% !important;
