--- a/src/comonents/Projects/index.css
+++ b/src/comonents/Projects/index.css
@@ -1,6 +1,26 @@
-
 .work{
     width: 315px;
     height: 300px;
     object-fit: cover;
+    margin: 5px auto;
+}
+.project-title{
+    text-shadow: -1.5px 1px #f8f9fa;
+}
+.btn,
+.current-card{
+    background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.85), rgb(200, 231, 202,0.65));
+    border: rgb(143, 188, 143, 0.75) 15px outset;
+    padding: 15px 0 !important;
+}
+.full-slider{
+    z-index: 8;
+    position: absolute;
+    top: 28vh;
+    left: 0px;
+    width: 100vw;
+}
+.btn{
+    max-width: 110px !important;
+    margin: 40px auto;
 }
