--- a/src/comonents/Projects/index.css
+++ b/src/comonents/Projects/index.css
@@ -12,6 +12,8 @@
     background-image: linear-gradient(-20deg, rgb(0, 143, 105, 0.85), rgb(200, 231, 202,0.65));
     border: rgb(143, 188, 143, 0.75) 15px outset;
     padding: 15px 0 !important;
+    text-shadow: -0.6px 0.6px #d9e2eb;
+    font-weight: 550;
 }
 .full-slider{
     z-index: 8;
@@ -23,4 +25,9 @@
 .btn{
     max-width: 110px !important;
     margin: 40px auto;
+}
+h6.tech{
+    font-weight: 650 !important;
+    color: rgb(56, 56, 56);
+    text-shadow: -0.5px 0.5px rgb(167, 189, 172);
 }
