--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@ body{
   min-height: 100vh;
   overflow: visible;
   padding-bottom: 60px;
-  background-image: linear-gradient(#f8f9fa,#f8f9fa, #bfc2bf);
+  /* background-image: linear-gradient(#f8f9fa,#f8f9fa, #bfc2bf); */
+  background-image: url(./images/00000-space-4678685_960_720.jpg);
+  background-size: cover;
 }
 html{
   width: 100% !important;
